--- a/templates/topic_posts.html
+++ b/templates/topic_posts.html
@@ -42,7 +42,7 @@
             {{ post.message }}
             {% if post.created_by == user %}
               <div class="mt-3">
-                  <a href="{% url 'edit_post' post.topic.board.pk post.topic.pk post.pk %}"
+                  <a href="{% url 'edit_post' post.topic.board.pk post.topic.pk post.pk %}">Edit</a>
                      class="btn btn-primary btn-sm"
                      role="button">Edit</a>
               </div>
